# lingo

./: Cargo.toml  rest.http
api/: .env  Cargo.toml
api/docs/: authentication.md  structure.md
api/migrations/2021-04-14-175858_create_users/: up.sql
api/migrations/2021-04-14-191306_create_access_tokens/: down.sql  up.sql
api/src/: database.rs  main.rs  schema.rs  show_posts.rs
api/src/models/: access_tokens.rs  mod.rs  mod_old.rs  users.rs
api/src/resolvers/: mod.rs  mutation.rs  query.rs
api/src/routes/: authentication.rs  channel.rs  graphql.rs  mod.rs
docs/: channels.md  structure.md
src/: database.rs  main.rs
src/models/: channels.rs  mod.rs  text_messages.rs  text_rooms.rs  users.rs
src/routes/: authentication.rs  channels.rs  mod.rs
src/routes/authentication/: mod.rs
ui/: elm.json  package-lock.json  package.json
ui/src/: App.elm
ui/src/Api/: Mutation.elm  Object.elm  Query.elm
ui/src/Api/Object/: User.elm
