[package]
authors = ["viktorstrate <viktorstrate@gmail.com>"]
edition = "2018"
name = "lingo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
chrono = "0.4.19"
mongodb = "1.0.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = {version = "0.8", features = ["v4"]}
